<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Caesar_Cipher">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_decode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/txtEncode"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_decode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/txtDecode"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" tools:targetApi="o" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/tv_encode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/txtDecode"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/txtEncode"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" tools:targetApi="o" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/values"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/pre_values"
        android:inputType="textPersonName"
        android:text="@string/pre_values"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_decode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="150dp"
                android:fontFamily="monospace"
                android:text="@string/decode"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="11sp"
                android:typeface="normal" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/key"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="serif-monospace"
                android:hint="@string/pre_key"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:targetApi="o"
                tools:text="@string/pre_key" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_encode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="150dp"
                android:gravity="center"
                android:text="@string/encode"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>